version/0.27/_sources/api/solver/_autosummary/settings/picture.rst.txt
:orphan:

.. _picture:

picture
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.picture
    :show-inheritance:

.. rubric:: Attributes

======================================================   =========================================================================================================================================================================================

Attribute                                                                                                                                                                                                                                  Summary

======================================================   =========================================================================================================================================================================================
:ref:`raytracer_image <raytracer_image>`                                                                                                                                                      Enable advanced raytracing for hardcopy and preview.

:ref:`color_mode <color_mode>`                                                                                                                                                                                                 'color_mode' child.

:ref:`driver_options <driver_options>`                                                                                                                                                                                     'driver_options' child.

:ref:`invert_background <invert_background>`                                                                                                                                                                            'invert_background' child.

:ref:`landscape <landscape>`                                                                                                                                                                                                    'landscape' child.

:ref:`x_resolution <x_resolution>`                                                                                                                                                                                           'x_resolution' child.

:ref:`y_resolution <y_resolution>`                                                                                                                                                                                           'y_resolution' child.

:ref:`dpi <dpi>`                                                                                                                                                                                                                      'dpi' child.

:ref:`use_window_resolution <use_window_resolution>`                                                                           Use the currently active window's resolution for hardcopy (ignores the x-resolution and y-resolution in this case).

:ref:`standard_resolution <standard_resolution>`                                                                                                                                                          Select from pre-defined resolution list.

:ref:`jpeg_hardcopy_quality <jpeg_hardcopy_quality>`                                                                                                                           0  : Saves lowest quality jpeg image, but with the least file size.

:ref:`invert_normals_for_avz <invert_normals_for_avz>`       In some cases, images exported to AVZ appear dark and do not match the true colors seen in the graphics window display. Enable 'invert-normals-for-avz' if you experience this issue.

======================================================   =========================================================================================================================================================================================

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`preview <preview>`                       Display a preview image of a hardcopy.

:ref:`save_picture <save_picture>`                            'save_picture' command.

:ref:`list_color_mode <list_color_mode>`                   'list_color_mode' command.

========================================   ==========================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`graphics <graphics>`       'graphics' child.

==========================   =====================

